<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_date_titles"
        android:entryValues="@array/pref_date_values"
        android:key="date"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_date" />

    <EditTextPreference
        android:key="customDate"
        android:title="@string/pref_title_custom_date"
        android:dialogTitle="@string/pref_custom_date"
        android:dialogMessage="@string/pref_custom_date_message"
        android:defaultValue="" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:entries="@array/pref_theme_titles"
        android:entryValues="@array/pref_theme_values"
        android:key="theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme"
        android:defaultValue="Default"/>



</PreferenceScreen>
